[package]
name = "rusty-ggml"
version = "0.0.3"
description = "Idiomatic bindings for the GGML library (pre-alpha)"
repository = "https://github.com/KerfuffleV2/rusty-ggml"
keywords = ["deep-learning", "machine-learning", "tensors", "ggml", "ml"]
edition = "2021"
license = "MIT"
resolver = "2"

[dependencies]
ggml-sys-bleedingedge = "=2304290124.0.0"
anyhow = "1"
thiserror = "1"
num-traits = "0.2"
num-derive="0.3"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
