[package]
name = "rusty-ggml"
version = "0.0.7"
description = "Idiomatic bindings for the GGML library (pre-alpha)"
repository = "https://github.com/KerfuffleV2/rusty-ggml"
keywords = ["deep-learning", "machine-learning", "tensor", "ggml", "ml"]
edition = "2021"
license = "MIT"
resolver = "2"

[features]
default = ["ggml-sys-bleedingedge/use_cmake"]
no_k_quants = ["ggml-sys-bleedingedge/no_k_quants"]
no_accelerate = ["ggml-sys-bleedingedge/no_accelerate"]
cublas = ["ggml-sys-bleedingedge/cublas"]
clblast = ["ggml-sys-bleedingedge/clblast"]
openblas = ["ggml-sys-bleedingedge/openblas"]
metal = ["ggml-sys-bleedingedge/metal"]

[dependencies]
ggml-sys-bleedingedge = "=2306220059.0.0"
anyhow = "1"
thiserror = "1"
num-traits = "0.2"
num-derive="0.3"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
